pagination in patient database

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body style="height: auto">
        <div id="root"></root>
         <!-- {
             ReactDOM.render(<App />, document.getElementById('root'));
