--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
     <body style="height: auto">
        <div id="root"></root>
+         <div id="toasterArea" style="display: flex"></div>
         <!-- {
             ReactDOM.render(<App />, document.getElementById('root'));
            } -->
