--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="/" />
     <meta
       http-equiv="Content-Security-Policy"
       content=" default-src 'self'; child-src child-src 'none'; img-src https://cdn.example.com 'self'; object-src 'none' "
@@ -34,7 +35,6 @@
   <body style="height: auto">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div id="toasterArea" style="display: flex"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
