--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,26 @@
 <html lang="en">
   <head>
     <base href="/" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
+    {% comment %} <meta http-equiv="Content-Security-Policy" content="script-src 'none'"> {% endcomment %}
+    <meta http-equiv="Content-Security-Policy" content="default-src https://cdn.example.net; child-src 'none'; object-src 'none'">
     {% comment %} <meta
       http-equiv="Content-Security-Policy"
       content=" default-src 'self'; child-src child-src 'none'; img-src https://cdn.example.com 'self'; object-src 'none' "
     /> {% endcomment %}
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL" />
+    <link rel="icon" href="https://healthclinic.systems" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="https://healthclinic.systems/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="https://healthclinic.systems/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
