--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,7 @@
 <html lang="en">
     <body style="height: auto">
+        <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; img-src https://*; child-src 'none';">
        <div id="root"></root>
         <!-- {
             ReactDOM.render(<App />, document.getElementById('root'));
